--- a/scss/main/_services/_menu.scss
+++ b/scss/main/_services/_menu.scss
@@ -6,15 +6,15 @@
         max-width: 400px;
         height: 100%;
         grid-area: sidebar;
-
-        background-color: #161616;
+        background: rgba(23, 23, 23, 0.4);
+        backdrop-filter: blur(8px);  
         @include font("Montserrat", 400);
         @include flex(column, flex-start, flex-start);
 
         &-header {
             width: 100%;
             padding: 10px 10px;
-            background-color:#202020;
+            background-color: transparent;
             flex: 0 0 auto;
         }
  
@@ -23,7 +23,7 @@
             width: 100%;
             font-size: 18px;
             border: 1px solid #969696;
-            background-color: #2b2b2b;
+            background-color: transparent;
             padding: 5px 20px 5px 5px;
             border-radius: 5px;
             color: #fff;
@@ -82,6 +82,6 @@
         }
 
         .select {
-            background-color: #292929;
+            background-color: #1a1a1a;
         }
     }
