--- a/scss/main/_services/_table.scss
+++ b/scss/main/_services/_table.scss
@@ -4,6 +4,10 @@
 
 .main-table {
     background-color: #1f1f1f;
+
+    background: rgba(31, 31, 31, 0.7);
+    box-shadow: 0px 0px 14px 4px rgba(0, 0, 0, 0.5);
+
     min-width: 100%;
     font-family: "Montserrat", sans-serif;
     color: #fff;
