--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -40,3 +40,22 @@ a, a:visited {
         }
     }
 }
+
+.fade-down {
+    animation-name: fadeDown;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+    animation-timing-function: ease-out;
+    opacity: 0;
+}
+
+@keyframes fadeDown {
+  from {
+    opacity: 0;
+    transform: translateY(-80px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
