--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -14,6 +14,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    animation-delay: 0s;
 
     &-logo {
         margin: 0;
