--- a/scss/main.scss
+++ b/scss/main.scss
@@ -16,6 +16,7 @@
 
 @use "./components/pages";
 @use "./components/accordion";
+@use "./components/loader";
 
 @use "./layout/header";
 @use "./layout/footer";
