--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,6 +17,7 @@
 @use "./components/pages";
 @use "./components/accordion";
 @use "./components/loader";
+@use "./components/error";
 
 @use "./layout/header";
 @use "./layout/footer";
