--- a/scss/main/_add-clients.scss
+++ b/scss/main/_add-clients.scss
@@ -37,6 +37,7 @@
 
         background: rgba(0, 0, 0, 0.7);
         backdrop-filter: blur(8px);  
+        padding: 0 20px;
 
         &-panel {
             margin-top: 50px;
