--- a/scss/main/_hero.scss
+++ b/scss/main/_hero.scss
@@ -42,6 +42,7 @@
         top: 0;
         left: 0;
         z-index: 3;
+        padding: 20px 20px;
 
         @include flex(column, center, center);
 
@@ -58,16 +59,17 @@
 
 
     &__title {
-        font-size: 80px;
+        font-size: clamp(40px, 10vw, 80px);
         margin: 0;
         letter-spacing: 5px;
         font-weight: 700;
         font-family: "Montserrat", sans-serif;
         animation-delay: 0.5s;
+        text-align: center;
     }
 
     &__input {
-        width: 500px;
+        width: clamp(200px, 70vw, 500px);
         font-size: 20px;
         outline: none;
         border-radius: 15px;
@@ -96,12 +98,12 @@
     }
 
     .result {
-        width: 150%;
+        width: clamp(100%, 70vw, 150%);
         top: 60px;
         list-style: none;
         margin: 0;
         font-family: "Montserrat", sans-serif;
-        padding: 0 10px 20px 0;
+        padding: 0 10px 0 10px;
 
         overflow: auto;
         transition: all 0.3s;
@@ -111,6 +113,7 @@
         overflow-x: hidden;
 
         &__item {
+            margin: 0 auto;
             margin-top: 10px;
             background: rgba(255, 255, 255, 0.1);
             -webkit-backdrop-filter: blur(10px);
@@ -123,7 +126,7 @@
             letter-spacing: 2px;
             transition: all 0.3s;
             cursor: pointer;
-
+            width: 100%;
 
             @include flex(row, space-between, center);
 
@@ -236,6 +239,11 @@
             height: 300px;
             background: #7b2cbf;
             animation-delay: 0s;
+
+            @media (max-width: 400px) {
+                width: 200px;
+                height: 200px;
+            }
         }
 
         .blob-2 {
@@ -254,6 +262,11 @@
             height: 400px;
             background: #4361ee;
             animation-delay: -4s;
+
+             @media (max-width: 600px) {
+                width: 200px;
+                height: 200px;
+            }
         }
 
         .glass-overlay {
